# colobot

./: CMakeLists.txt  CONTRIBUTING.md
src/: CMakeLists.txt
src/app/: app.cpp  app.h  controller.h  modman.cpp  signal_handlers.cpp
src/common/: error.h  event.cpp  event.h  restext.cpp  restext.h
src/graphics/core/: vertex.h
src/graphics/engine/: camera.cpp  engine.h  engine_types.h  lightning.cpp  particle.cpp  particle.h  planet_type.h  pyro.cpp  pyro.h  pyro_type.h  terrain.h  trace_color.cpp  trace_color.h  water.cpp  water.h
src/graphics/opengl33/: glutil.cpp
src/level/: drive_type.h  mission_type.h  player_profile.cpp  robotmain.cpp  robotmain.h  scene_conditions.cpp  scene_conditions.h  scoreboard.cpp  scoreboard.h  tool_type.h
src/level/parser/: parser.cpp  parser.h  parserexceptions.cpp  parserline.cpp  parserline.h  parserparam.cpp  parserparam.h  path_inject.h
src/math/: point.h  vector.h
src/object/: crash_sphere.h  drive_type.cpp  object.cpp  object.h  object_details.cpp  object_details.h  object_details_hardcode.cpp  object_details_hardcode.h  object_factory.cpp  object_factory.h  object_interface_type.h  object_manager.cpp  object_manager.h  object_part_filter.cpp  object_part_filter.h  object_type.cpp  object_type.h  old_object.cpp  old_object.h  old_object_interface.cpp  old_object_interface.h  tool_type.cpp
src/object/auto/: auto.cpp  auto.h  autobase.cpp  autobase.h  autoboat.cpp  autoboat.h  autoconvert.cpp  autoconvert.h  autoderrick.cpp  autoderrick.h  autodestroyer.cpp  autodestroyer.h  autoegg.cpp  autoegg.h  autofactory.cpp  autofactory.h  autofan.cpp  autofan.h  autoflag.cpp  autoflag.h  autohouston.cpp  autohouston.h  autoinfo.cpp  autoinfo.h  autojostle.cpp  autojostle.h  autolabo.cpp  autolabo.h  autolamp.cpp  autolamp.h  automush.cpp  automush.h  autonest.cpp  autonest.h  autonuclearplant.cpp  autonuclearplant.h  autoorgacannon.cpp  autoorgacannon.h  autoportico.cpp  autoportico.h  (+24 more)
src/object/details/: assistant_details.cpp  assistant_details.h  automated_details.cpp  automated_details.h  automation_details.cpp  automation_details.h  controllable_details.cpp  controllable_details.h  creation_details.cpp  creation_details.h  damageable_details.cpp  damageable_details.h  destroyable_details.cpp  destroyable_details.h  details_provider.cpp  details_provider.h  detectable_details.cpp  detectable_details.h  exchange_post_details.cpp  exchange_post_details.h  flying_details.cpp  flying_details.h  fragile_details.cpp  fragile_details.h  global_details.cpp  global_details.h  hardcode.cpp  hardcode.h  jet_flying_details.cpp  jet_flying_details.h  josteable_details.cpp  josteable_details.h  jostleable_details.cpp  jostleable_details.h  level_details.cpp  level_details.h  macro.cpp  macro.h  modeled_details.cpp  modeled_details.h  (+30 more)
src/object/hardcode/: assistant_hardcode.cpp  assistant_hardcode.h  automated_hardcode.cpp  automated_hardcode.h  controllable_hardcode.cpp  controllable_hardcode.h  damageable_hardcode.cpp  damageable_hardcode.h  destroyable_hardcode.cpp  destroyable_hardcode.h  detectable_hardcode.cpp  detectable_hardcode.h  exchange_post_hardcode.cpp  exchange_post_hardcode.h  flying_hardcode.cpp  flying_hardcode.h  fragile_hardcode.cpp  fragile_hardcode.h  global_hardcode.cpp  global_hardcode.h  jet_flying_hardcode.cpp  jet_flying_hardcode.h  jostleable_hardcode.cpp  jostleable_hardcode.h  level_hardcode.cpp  level_hardcode.h  modeled_hardcode.cpp  modeled_hardcode.h  movable_hardcode.cpp  movable_hardcode.h  naming_hardcode.cpp  naming_hardcode.h  physical_hardcode.cpp  physical_hardcode.h  power_container_hardcode.cpp  power_container_hardcode.h  programmable_hardcode.cpp  programmable_hardcode.h  ranged_hardcode.cpp  ranged_hardcode.h  (+18 more)
src/object/helpers/: cargo_helpers.cpp  cargo_helpers.h  common_helpers.cpp  common_helpers.h  level_helpers.cpp  level_helpers.h  modeled_helpers.cpp  modeled_helpers.h  power_helpers.cpp  power_helpers.h  programmable_helpers.cpp  programmable_helpers.h
src/object/implementation/: exchange_post_impl.cpp  exchange_post_impl.h  program_storage_impl.cpp  programmable_impl.cpp  programmable_impl.h  task_executor_impl.cpp  task_executor_impl.h
src/object/interface/: exchange_post_object.h  jet_flying_object.h  modeled_object.h  movable_object.h  shielder_object.h  slotted_object.h  task_executor_object.h  thumpable_object.h  trace_drawing_object.h  transportable_object.h
src/object/motion/: motion.cpp  motion.h  motionant.cpp  motionant.h  motionbee.cpp  motionbee.h  motionhuman.cpp  motionhuman.h  motionlegged.cpp  motionlegged.h  motionqueen.cpp  motionqueen.h  motionspider.cpp  motionspider.h  motiontoto.cpp  motiontoto.h  motiontracked.cpp  motiontracked.h  motionvehicle.cpp  motionvehicle.h  motionwheeled.cpp  motionwheeled.h  motionwinged.cpp  motionwinged.h  motionworm.cpp  motionworm.h
src/object/subclass/: base_movable.cpp  base_movable.h  base_robot.cpp  exchange_post.cpp  exchange_post.h  shielder.cpp  shielder.h  static_object.cpp  static_object.h
src/object/task/: task.cpp  task.h  taskadvance.cpp  taskbuild.cpp  taskbuild.h  taskdeflag.cpp  taskdeflag.h  taskdeletemark.cpp  taskfire.cpp  taskfire.h  taskfireant.cpp  taskflag.cpp  taskflag.h  taskgoto.cpp  taskgoto.h  taskgungoal.cpp  taskgungoal.h  taskinfo.cpp  taskinfo.h  taskmanip.cpp  taskmanip.h  taskpen.cpp  taskpen.h  taskrecover.cpp  taskrecover.h  tasksearch.cpp  tasksearch.h  taskshield.cpp  taskshield.h  taskspiderexplo.cpp  tasktake.cpp  tasktake.h  taskterraform.cpp  taskturn.cpp  taskwait.cpp
src/physics/: physics.cpp  physics.h
src/script/: cbottoken.cpp  cbottoken.h  script.h  scriptfunc.cpp  scriptfunc.h
src/sound/: sound_type.h
src/ui/: debug_menu.cpp  displayinfo.cpp  displaytext.cpp  displaytext.h  mainshort.cpp  mainshort.h  object_interface.cpp  object_interface.h  particles_generator.h  studio.cpp  widget.h
src/ui/controls/: edit.cpp  interface.cpp  interface.h  logo.cpp  logo.h  map.cpp  map.h  target.cpp  window.cpp  window.h
src/ui/screen/: screen_io.cpp  screen_level_list.cpp  (+2 more)
(+85 files in other folders)
